fix scroll bug with hacked fix, change hr spacing

--- a/rgb.css
+++ b/rgb.css
@@ -25,7 +25,7 @@
 
 #time {
     background-color: #333;
-    padding: 3% 0;
+    padding: 4% 0;
 }
 
 #red {
@@ -253,6 +253,7 @@ input {
 
 hr {
     border: 2px solid white;
+    margin: 50px 0;
 }
 
 body {
